RESOLVED FIXED129472
[iOS][WK2] highlight rects should never big bigger than the view
https://bugs.webkit.org/show_bug.cgi?id=129472
Summary [iOS][WK2] highlight rects should never big bigger than the view
Benjamin Poulain
Reported 2014-02-28 00:29:47 PST
[iOS][WK2] highlight rects should never big bigger than the view
Attachments
Patch (5.07 KB, patch)
2014-02-28 00:31 PST, Benjamin Poulain
enrica: review+
Benjamin Poulain
Comment 1 2014-02-28 00:31:04 PST
Enrica Casucci
Comment 2 2014-02-28 15:03:09 PST
Comment on attachment 225443 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=225443&action=review Looks good to me. > Source/WebKit2/UIProcess/ios/WKContentViewInteraction.mm:296 > +static inline bool highlightedQuadsFitInRect(const Vector<FloatQuad>& quads, const FloatRect& rect) maybe isHighlightQuadSmaller ?
Benjamin Poulain
Comment 3 2014-02-28 15:50:12 PST
Note You need to log in before you can comment on or make changes to this bug.